# TMT-2

./: .gitignore  README.md  game.py  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: push.yml
agents/: UserGameAgent.go
docs/meetings/: 03_12_2025.md  11_11_2025.md  core_points_04-03-26.md
docs/planning/: timeline.md
emulator/: build_go.py  controls.py  emulator.py  gobuild.py  grid.py  main.py  metrics.py  parser.py  paths.py  sidebar.py
experiments/: sweep.py
infra/: BaseGameAgent.go  IGameController.go  actions.go  environment.go  environment_types.go  movement.go
server/: GameAPI.go  GameServer.go
src/: go.mod  main.go  tmt_bin
src/agent/: Energy.go  ITMTAgent.go  Kinship.go  Messaging.go  Movement.go  ServerAPI.go  TMTAgent.go  TMTModel.go
src/algo/: BiexpSynapse.go  UnitTest.go
src/config/: build_config.py  config.go  config.json  gen_config.py
src/env/: Environment.go  Grave.go  IEnvironment.go  Position.go  Resources.go  Tile.go
src/infra/: Environment.go  GameAgent.go  IEnvironment.go  IGameAgent.go  ITMTAgent.go  TMTAgent.go  Tile.go  environment.go
src/model/: Neuron.go  Synapse.go  TMTNetwork.go
src/server/: AgentCallable.go  AgentControl.go  AgentRequests.go  Death.go  GameAPI.go  GameServer.go  TMTRequests.go
