[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emulator"
version = "0.1.0"
description = "Emulator CLI"
requires-python = ">=3.9"

dependencies = [
    "dearpygui>=2.1.1",
]

[project.scripts]
emulator = "emulator.main:main"

[tool.setuptools.packages.find]
where = ["."]
